Project

General

Profile

Actions

Bug #47452

closed

invalid values of crush-failure-domain should not be allowed while creating erasure-coded profile

Added by Prashant D over 3 years ago. Updated about 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
ceph cli
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

  1. ceph osd erasure-code-profile set testprofile k=4 m=2 crush-failure-domain=x
  1. ceph osd erasure-code-profile get testprofile
    crush-device-class=
    crush-failure-domain=x <---------- invalid failure domain
    crush-root=default
    jerasure-per-chunk-alignment=false
    k=4
    m=2
    plugin=jerasure
    technique=reed_sol_van
    w=8

Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #48378: octopus: invalid values of crush-failure-domain should not be allowed while creating erasure-coded profileResolvedNathan CutlerActions
Copied to RADOS - Backport #48379: nautilus: invalid values of crush-failure-domain should not be allowed while creating erasure-coded profileResolvedNathan CutlerActions
Actions #1

Updated by Prashant D over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 37150
Actions #2

Updated by Kefu Chai over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions #3

Updated by Prashant D over 3 years ago

  • Status changed from Resolved to Pending Backport
  • Backport set to nautilus,octopus
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48378: octopus: invalid values of crush-failure-domain should not be allowed while creating erasure-coded profile added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #48379: nautilus: invalid values of crush-failure-domain should not be allowed while creating erasure-coded profile added
Actions #6

Updated by Nathan Cutler about 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF