mon: validate crush-failure-domain

While creating erasure-coded profile make sure
that user is specifying valid crush-failure-domain.

Fixes: https://tracker.ceph.com/issues/47452

Signed-off-by: Prashant Dhange <pdhange@redhat.com>
(cherry picked from commit f8b7fddc4c4a787d58fb9efef6ecb13cf878f92b)